--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "babel-plugin-import": "^1.13.3",
     "core-js": "^3.6.5",
     "crypto-js": "^4.0.0",
+    "moment": "^2.29.1",
     "postcss-pxtorem": "^5.1.1",
     "vant": "^2.12.18",
     "vue": "^2.6.11",
-    "vue-async-computed": "^3.9.0",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
   },
@@ -25,8 +25,10 @@
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "babel-eslint": "^10.1.0",
+    "compression-webpack-plugin": "^4.0.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "image-webpack-loader": "^7.0.1",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
